Fix display of fontawesome icons on firefox
fa-regular (used for font weight 400) appears to not include the icon
f502 we use for preset accounts, while fa-solid (weight 900) does. No
idea why only firefox fails to display the icon for preset accounts.

--- a/skins/elastic/carddav.css
+++ b/skins/elastic/carddav.css
@@ -8,17 +8,14 @@
 
 .listing.iconized li.addressbook > a:before {
   content:"\f2b9";
-  font-weight:400
 }
 
 .listing.iconized > li.account.preset > a:before {
   content:"\f502";
-  font-weight:400
 }
 
 .listing.iconized > li.account:not(.preset) > a:before {
   content:"\f007";
-  font-weight:400
 }
 
 .menu a.carddav_AccAdd:before {
